--- a/Js-01-Variables/index.html
+++ b/Js-01-Variables/index.html
@@ -8,6 +8,8 @@
 <body>
     <h1>VARIABLES</h1>
 
-    <script src="1-variables.js"></script>
+    <!-- <script src="1-variables.js"></script> -->
+
+    <script src="2-operators.js"></script>
 </body>
 </html>
