--- a/Js-02-operators-conditions/index.html
+++ b/Js-02-operators-conditions/index.html
@@ -9,6 +9,12 @@
     <h3>Operators - Conditions</h3>
 
 
-    <script src="operators.Js"></script>
+    <!-- <script src="operators.Js"></script> -->
+<!-- 
+    <script src="if-ifelse-else.js"></script> -->
+
+    <!-- <script src="short-circuit.js"></script> -->
+
+    <script src="Turnery.js"></script>
 </body>
 </html>
