--- a/Js-02-operators-conditions/index.html
+++ b/Js-02-operators-conditions/index.html
@@ -15,6 +15,8 @@
 
     <!-- <script src="short-circuit.js"></script> -->
 
-    <script src="Turnery.js"></script>
+    <!-- <script src="Turnery.js"></script> -->
+
+    <script  src="./switch-case.js"></script>
 </body>
 </html>
