Array iteraton start

--- a/Js-06-Array iteration/index.html
+++ b/Js-06-Array iteration/index.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Arrays</h1>
-    <!-- <script src="Array.js"></script> -->
-     <script src="./Array-methods.js"></script>
+    <!-- <script src="./ArrayLoops.js"></script> -->
+     <script src="./Array-iteration.js"></script>
 </body>
 </html>
