--- a/js-09-DOM/index.html
+++ b/js-09-DOM/index.html
@@ -29,7 +29,7 @@
         </section>
       </section>
     </main>
-    <script src="./selectors.js"></script>
-    <!-- <script src="traversingDOM.js"></script> -->
+    <!-- <script src="./selectors.js"></script> -->
+    <script src="traversing-dom.js"></script>
   </body>
 </html>
