--- a/js-12-Async-1/index.html
+++ b/js-12-Async-1/index.html
@@ -32,6 +32,7 @@
 
 <!-- <script src="./timeot-interval.js"></script> -->
  <!-- <script src="./promise.js"></script> -->
-  <script src="./fetchChain.js"></script>
+  <!-- <script src="./fetchChain.js"></script> -->
+   <script src="./fetchAsyncAwait.js"></script>
 </body>
 </html>
